--- a/Da3wa.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/Da3wa.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -563,7 +563,7 @@
                         <div class="collapse show" id="managementSection">
                             <ul class="nav flex-column submenu">
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="Events" asp-action="Index">
+                                    <a class="nav-link" asp-controller="Event" asp-action="Index">
                                         <i class="fas fa-calendar-check"></i>
                                         <span class="menu-text">Events</span>
                                     </a>
@@ -600,7 +600,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="Categories" asp-action="Index">
+                                    <a class="nav-link" asp-controller="Category" asp-action="Index">
                                         <i class="fas fa-tags"></i>
                                         <span class="menu-text">Categories</span>
                                     </a>
