- Add all search in all table

--- a/Da3wa.WebUI/Views/Auth/Index.cshtml
+++ b/Da3wa.WebUI/Views/Auth/Index.cshtml
@@ -39,12 +39,20 @@
 <div class="row">
     <div class="col-12">
         <div class="admin-card">
-            <div class="card-header">
+            <div class="card-header d-flex justify-content-between align-items-center">
                 <h5 class="card-title mb-0">Users List</h5>
+                <div class="ms-auto" style="min-width: 250px;">
+                    <div class="input-group input-group-sm">
+                        <span class="input-group-text bg-white border-end-0">
+                            <i class="fas fa-search text-muted"></i>
+                        </span>
+                        <input type="text" id="userSearch" class="form-control border-start-0 ps-0" placeholder="Search users...">
+                    </div>
+                </div>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-hover">
+                    <table class="table table-hover" id="userTable">
                         <thead>
                             <tr>
                                 <th>Name</th>
@@ -177,6 +185,13 @@
             setTimeout(function() {
                 $('.alert').fadeOut('slow');
             }, 5000);
+
+            $("#userSearch").on("keyup", function() {
+                var value = $(this).val().toLowerCase();
+                $("#userTable tbody tr").filter(function() {
+                    $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                });
+            });
         });
     </script>
 }
