--- a/Da3wa.WebUI/Views/Category/Index.cshtml
+++ b/Da3wa.WebUI/Views/Category/Index.cshtml
@@ -29,12 +29,20 @@
 <div class="row">
     <div class="col-12">
         <div class="admin-card">
-            <div class="card-header">
+            <div class="card-header d-flex justify-content-between align-items-center">
                 <h5 class="card-title mb-0">Categories List</h5>
+                <div class="ms-auto" style="min-width: 250px;">
+                    <div class="input-group input-group-sm">
+                        <span class="input-group-text bg-white border-end-0">
+                            <i class="fas fa-search text-muted"></i>
+                        </span>
+                        <input type="text" id="categorySearch" class="form-control border-start-0 ps-0" placeholder="Search categories...">
+                    </div>
+                </div>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-hover">
+                    <table class="table table-hover" id="categoryTable">
                         <thead>
                             <tr>
                                 <th>Name</th>
@@ -82,3 +90,16 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    <script>
+        $(document).ready(function() {
+            $("#categorySearch").on("keyup", function() {
+                var value = $(this).val().toLowerCase();
+                $("#categoryTable tbody tr").filter(function() {
+                    $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                });
+            });
+        });
+    </script>
+}
