--- a/Da3wa.WebUI/Views/Guest/Index.cshtml
+++ b/Da3wa.WebUI/Views/Guest/Index.cshtml
@@ -28,9 +28,9 @@
                 <p class="text-muted mb-0">Manage guests in the system</p>
             </div>
             <div>
-                <button type="button" class="btn btn-outline-primary me-2" data-bs-toggle="modal" data-bs-target="#importVcfModal">
-                    <i class="fas fa-upload me-2"></i>Import VCF
-                </button>
+                <a href="@Url.Action("ImportVcf", "Guest")" class="btn btn-outline-primary me-2">
+                    <i class="fas fa-file-upload me-2"></i>Import from VCF
+                </a>
                 <a href="@Url.Action("Create", "Guest")" class="btn btn-admin">
                     <i class="fas fa-plus me-2"></i>Add Guest
                 </a>
@@ -141,44 +141,6 @@
                     </table>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-
-<!-- Import VCF Modal -->
-<div class="modal fade" id="importVcfModal" tabindex="-1" aria-labelledby="importVcfModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="importVcfModalLabel">Import Guests from VCF</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <form method="post" enctype="multipart/form-data" action="@Url.Action("ImportVcf", "Guest")">
-                @Html.AntiForgeryToken()
-                <div class="modal-body">
-                    <div class="mb-3">
-                        <label for="vcfFile" class="form-label">Select VCF File</label>
-                        <input type="file" class="form-control" id="vcfFile" name="vcfFile" accept=".vcf" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="eventId" class="form-label">Select Event</label>
-                        <select class="form-select" id="eventId" name="eventId" required>
-                            <option value="">Select an event</option>
-                            @if (ViewData["Events"] is SelectList eventsList)
-                            {
-                                foreach (var item in eventsList)
-                                {
-                                    <option value="@item.Value">@item.Text</option>
-                                }
-                            }
-                        </select>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-primary">Import</button>
-                </div>
-            </form>
         </div>
     </div>
 </div>
