handel error of craeting guests

--- a/Da3wa.WebUI/Views/Guest/Create.cshtml
+++ b/Da3wa.WebUI/Views/Guest/Create.cshtml
@@ -47,13 +47,13 @@
                             <label for="FamilyNumber" class="form-label">Family Number</label>
                             <input type="number" class="form-control" id="FamilyNumber" name="FamilyNumber" value="1" min="1" required>
                         </div>
-                        <div class="col-md-6 mb-3">
+                      @*   <div class="col-md-6 mb-3">
                             <label for="IsAttending" class="form-label">Is Attending</label>
                             <div class="form-check form-switch">
                                 <input class="form-check-input" type="checkbox" id="IsAttending" name="IsAttending" checked>
                                 <label class="form-check-label" for="IsAttending">Yes</label>
                             </div>
-                        </div>
+                        </div> *@
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Phone Numbers</label>
